# softauth

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: codec.rs  main.rs
src/authenticator/: api.rs  command.rs  mod.rs  storage.rs  transport.rs
src/authenticator/auth_impl/: ctap2_impl.rs  make_credential_impl.rs  mod.rs
src/authenticator/crypto/: cose.rs  crypto_system.rs  mod.rs  ring.rs
src/authenticator/types/: common.rs  get_info.rs  make_credential.rs  mod.rs
src/cbor/: key_mapped.rs  key_mapped_de.rs  key_mapped_ser.rs  mod.rs  ordered_ser.rs  serde_bytes_array.rs  serde_key_mapper.rs
src/hid/: channel.rs  command.rs  command_handler.rs  device.rs  mod.rs  packet.rs  packet_processing.rs  server.rs  transport.rs
src/hid/linux/: device.rs  mod.rs  uhid_transport.rs
uhid-virt-patched/: .gitignore  Cargo.toml
uhid-virt-patched/example/: Cargo.toml
uhid-virt-patched/example/src/: main.rs
uhid-virt-patched/src/: codec.rs  lib.rs  uhid_device.rs
